--- a/Fomulário/css/style.css
+++ b/Fomulário/css/style.css
@@ -1,11 +1,12 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Montserrat', sans-serif;
-  
+  font-family: 'Roboto';
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,400;1,200;1,300&family=Open+Sans:wght@300;500;600&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,400;1,200;1,300&family=Open+Sans:wght@300;500;600&family=Roboto:ital,wght@0,100;0,300;1,100;1,300&display=swap');
 
 .titulo {
   align-items: center;
@@ -14,13 +15,18 @@
   border-bottom: 2.3px solid rgb(0, 0, 0);
   padding-bottom: 4px;
   color: white;
+  font-family: 'Monstserrat';
+  color: #000;
+  text-transform: uppercase
 }
 
 .subtitulo {
   text-align: center;
   padding: 20px;
-  font-size: 1.2rem;
-  color: white;
+  font-size: 16px;
+  color: #000;
+  font-family: 'Roboto';
+  font-weight: 500;
 }
 
 
@@ -36,7 +42,7 @@ fieldset {
 }
 
 body {
-  background-color: #F0F8FF;
+  background-color: #3b3b3b;
   font-size: 1rem;
   margin-left: 30%;
   margin-right: 30%;
@@ -46,7 +52,7 @@ body {
 }
 
 .background {
-  background-color: #333333;
+  background-color: #fcae18;
   padding: 30px;
   border-radius: 15px
 }
@@ -64,6 +70,8 @@ select {
   padding: 3px;
   border: 1px solid #000;
   box-shadow: 2px 2px 2px black;
+  background-color: #f3f3f3;
+  color: #000;
 }
 
 #resultado {
@@ -78,49 +86,63 @@ select {
 .campo label {
   margin-bottom: 0.2rem;
   display: block;
-  font-size: 20px;
+  font-size: 17px;
   color: white;
 }
 
-label{
+label {
   color: black;
 }
 
+.div-botao-form{
+  text-align: center;
+}
 
-.btn {
+.btn-form {
   border: solid 1px rgb(255, 187, 0);
   padding: 10px 20px 10px 20px;
   border-radius: 10px;
   color: rgb(0, 0, 0);
   background-color: white;
   transition: background-color 0.5s ease, color 0.5s ease, transform 0.5s ease;
-
-
 }
 
-.btn:hover {
+.btn-form:hover {
   background-color: #FFA100;
   color: white;
   transform: scale(1.2)
 }
 
-.botao {
+.div-botao-copiar{
   text-align: center;
+  margin-top: 20px;
+}
+
+.btn-copiar-assinatura{
+  border: solid 1px;
+  padding: 10px 20px 10px 20px;
+  border-radius: 10px;
+  color: rgb(0, 0, 0);
+  background-color: white;
+  transition: background-color 0.5s ease, color 0.5s ease, transform 0.5s ease;
+  display: none;
 }
 
 #resultado {
   font-family: arial, sans-serif;
   margin-top: 20px;
   font-size: 0.6rem;
-  background:white;
+  background: white;
   padding: 15px;
   border-radius: 15px;
+  display: none;
 }
 
-.info-resultado{
+.info-resultado {
   color: black;
   text-transform: uppercase;
   user-select: none;
   font-weight: bold;
 }
+
 /* .campo input[type="text"], .campo input[type="email"] */
