--- a/formulario/css/style.css
+++ b/formulario/css/style.css
@@ -14,12 +14,22 @@
   display: flex;
   border-bottom: 2.3px solid rgb(0, 0, 0);
   padding-bottom: 4px;
-  color: white;
-  font-family: 'Monstserrat';
-  color: #f3f3f3;
+  font-family: 'Times New Roman', Times, serif;
+  color: #000000;
   text-transform: uppercase;
-  font-weight: 500;
+  font-weight: 700;
 }
+
+.titulo::after {
+  content: "";
+  background-image: url('https://a-us.storyblok.com/f/1006947/x/e39e2f116a/favicon.ico');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center right;
+  padding-left: 20px;
+  padding: 2rem;
+}
+
 
 .subtitulo {
   text-align: center;
@@ -42,13 +52,15 @@ fieldset {
   justify-content: space-between;
 }
 
-.campo.setor{
+
+
+.campo.setor {
   margin-left: 20px;
 }
 
 
 body {
-  background-color: #3b3b3b;
+  background: linear-gradient(to right, #FFA100, #FF4500);
   font-size: 1rem;
   margin-left: 30%;
   margin-right: 30%;
@@ -58,7 +70,7 @@ body {
 }
 
 .background {
-  background-color: #fcae18;
+  background-color: #f3f3f3;
   padding: 30px;
   border-radius: 15px;
 }
@@ -93,7 +105,7 @@ select {
   margin-bottom: 0.2rem;
   display: block;
   font-size: 17px;
-  color: white;
+  color: black;
 }
 
 
@@ -143,6 +155,11 @@ label {
   padding: 15px;
   border-radius: 15px;
   display: none;
+}
+
+.campoTelefone{
+  justify-content: space-between;
+  margin-left: 20px;
 }
 
 .info-resultado {
